style.css
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-family: Lexend Deca;
    color: #f2f2f2;
}

main {
    display: flex;
    border-radius: 8px;
    flex-wrap: wrap;
}

.card {
    margin: auto;
    max-width: 307px;
    padding: 48px;
}
.card:first-child {
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}

.card:last-child {
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
}

.sedan {
    background-color: hsl(31, 77%, 52%);
}

.suv {
    background-color: hsl(184, 100%, 22%);
}

.luxury {
    background-color: hsl(179, 100%, 13%);
}

.car-icon {
    margin-bottom: 35px;
}

.car-type {
    margin-bottom: 25px;
    font-family: Big Shoulders Display;
    text-transform: uppercase;
}

.description {
    margin-bottom: 83px;
    font-weight: 400;
}

.details {
    padding: 11px 31.5px 12px;
    border-radius: 25px;
    background-color: #f2f2f2;
    border: 2px solid transparent;
}

.details.sedan {
    color: #E28625;
}

.details.suv {
    color: #006971;
}

.details.luxury {
    color: #004140;
}

.details:hover {
    border: 2px solid #FFF;
    background-color: transparent;
    color: white;
    cursor: pointer;
}

.attribution {
    font-size: 11px; text-align: center;
    color: black;
}
.attribution a {
    color: hsl(228, 45%, 44%);
}

@media (min-width: 307px) and (max-width: 631px) {
    .card:first-child {
        border-top-left-radius: 10px;
        border-top-right-radius: 10px;
        border-bottom-left-radius: 0px;
    }

    .card:last-child {
        border-top-right-radius: 0px;
        border-bottom-left-radius: 10px;
    }
}

